a test to comit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             
         <p>Write a paragraph about you
-            Hello world I am Rajul Basnet and I'm 16 years old I go to Cambridge Rindge and Latin School. I am from Cambridge MA and I lived here my whole life. A few things I love to do is Play Basketball,lift and hangout with friends. </p>
+            Hello world I am Rajul Basnet and I'm 16 years old I go to Cambridge Rindge and Latin School. I am from Cambridge MA and I lived here my whole life. A few things I love to do is Play Basketball,lift and hangout with friends woah. </p>
         </div>
     </main>
     <footer id="mytext">this is the footer</footer>
