fix paths to ./

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>replit</title>
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="favicon R.ico" />
 
 </head>
@@ -16,9 +16,9 @@
         <div class="hero-text">
             <h1>Welcome to Rajul's Page!</h1>
             <nav>
-                <a class="links1" href="/html/projects.html">Projects</a>
-                <a class="links1" href="/html/contact.html">Contact</a>
-                 <a class="links1" href="/html/skill.html">skills</a>
+                <a class="links1" href="./html/projects.html">Projects</a>
+                <a class="links1" href="./html/contact.html">Contact</a>
+                 <a class="links1" href="./html/skill.html">skills</a>
                 <a class="links1" href="#mytext">Me</a>
             </nav>
 
@@ -31,7 +31,7 @@
        </div>
         <div class="text">
             <div class="pic">
-                <img src="/images/bball.jpg" alt="basketball-pic" width=200px;>
+                <img src="./images/bball.jpg" alt="basketball-pic" width=200px;>
             </div>
 
 
